--- a/templates/_partials/logo_light.html
+++ b/templates/_partials/logo_light.html
@@ -5,6 +5,6 @@
     src="{% static 'logo.svg' %}"
     alt="Logo of a sparkly world."
   /> {% endcomment %}
-  {% include "_partials/bolt.html" %}
+  {% include "_partials/logo.html" %}
   <p class="ml-2 text-2xl font-semibold text-gray-900">FastInvites</p>
 </div>
