--- a/accounts/templates/accounts/membership_list.html
+++ b/accounts/templates/accounts/membership_list.html
@@ -16,7 +16,7 @@
       <ol role="list" class="flex items-center space-x-2">
         <li>
           <div class="flex">
-            <a href="{% url 'dashboard' %}" class="text-xs font-medium text-gray-500 hover:text-gray-700">Home</a>
+            <a href="#" class="text-xs font-medium text-gray-500 hover:text-gray-700">Home</a>
           </div>
         </li>
         <li>
@@ -43,9 +43,9 @@
       <h2 class="text-2xl font-bold text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">{{ view.title }}</h2>
     </div>
     <div class="sm:mt-4 flex shrink-0 md:mt-0 md:ml-4">
-      <a href="{% url 'member_create' team.slug %}" type="button" class="mr-3 my-6 sm:my-0 inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-primary-600 shadow-xs hover:bg-primary-50 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Invite Member</a>
-      {% comment %} <a href="{% url 'member_create' team.slug %}" type="button" class="mr-3 my-6 sm:my-0 inline-flex items-center rounded-md bg-primary-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-primary-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Create</a> {% endcomment %}
-      {% include '_partials/ask_ai.html' %}
+      <a href="{% url 'membership_create' team.slug %}" type="button" class="mr-3 my-6 sm:my-0 inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-primary-600 shadow-xs hover:bg-primary-50 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Invite Member</a>
+      {% comment %} <a href="{% url 'membership_create' team.slug %}" type="button" class="mr-3 my-6 sm:my-0 inline-flex items-center rounded-md bg-primary-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-primary-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Create</a> {% endcomment %}
+      {% comment %} {% include '_partials/ask_ai.html' %} {% endcomment %}
     </div>
   </div>
 </div>
@@ -115,7 +115,7 @@
                 <div class="flex-none rounded-full bg-emerald-500/20 p-1">
                   <div class="size-1.5 rounded-full bg-emerald-500"></div>
                 </div>
-                <p class="text-xs/5 text-gray-500">{{ object.state }}</p>
+                <p class="text-xs/5 text-gray-500">{{ object.status }}</p>
               </div>
             </div>
             <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5 flex-none text-gray-400">
@@ -149,9 +149,9 @@
               <a href="{{ object.get_absolute_url }}" aria-current="page" class="text-sm font-medium text-primary-600 hover:text-primary-800">{{ object.email }}</a>
             </td>
             <td class="hidden px-3 py-4 text-sm whitespace-nowrap text-gray-500 sm:table-cell">{{ object.permissions.all|length }}</td>
-            <td class="px-3 py-4 text-sm whitespace-nowrap text-gray-500">{{ object.state }}</td>
+            <td class="px-3 py-4 text-sm whitespace-nowrap text-gray-500">{{ object.status }}</td>
             <td class="py-4 pr-4 pl-3 text-right text-sm font-medium whitespace-nowrap sm:pr-0">
-              <a href="{% url 'member_update' team.slug object.slug %}" class="text-primary-600 hover:text-primary-900">Edit<span class="sr-only"> Member, {{ object.email }}</span></a>
+              <a href="{% url 'membership_update' team.slug object.uuid %}" class="text-primary-600 hover:text-primary-900">Edit<span class="sr-only"> Member, {{ object.email }}</span></a>
             </td>
           </tr>
         {% endfor %}
