--- a/accounts/templates/accounts/team_detail.html
+++ b/accounts/templates/accounts/team_detail.html
@@ -15,7 +15,7 @@
       <ol role="list" class="flex items-center space-x-2">
         <li>
           <div class="flex">
-            <a href="{% url 'dashboard' %}" class="text-xs font-medium text-gray-500 hover:text-gray-700">Home</a>
+            <a href="#" class="text-xs font-medium text-gray-500 hover:text-gray-700">Home</a>
           </div>
         </li>
         <li>
@@ -42,9 +42,9 @@
       <h2 class="text-2xl font-bold text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">{{ view.title }}</h2>
     </div>
     <div class="sm:mt-4 flex shrink-0 md:mt-0 md:ml-4">
-      <a href="{% url 'member_create' team.slug %}" type="button" class="mr-3 my-6 sm:my-0 inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-primary-600 shadow-xs hover:bg-primary-50 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Invite Member</a>
+      <a href="{% url 'membership_create' team.slug %}" type="button" class="mr-3 my-6 sm:my-0 inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-primary-600 shadow-xs hover:bg-primary-50 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Invite Member</a>
       <a href="{% url 'team_update' team.slug %}" type="button" class="mr-3 my-6 sm:my-0 inline-flex items-center rounded-md bg-primary-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-primary-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Edit</a>
-      {% include '_partials/ask_ai.html' %}
+      {% comment %} {% include '_partials/ask_ai.html' %} {% endcomment %}
     </div>
   </div>
 </div>
@@ -69,7 +69,7 @@
         {% comment %} <a href="#" class="border-b-2 border-transparent px-1 py-4 text-sm font-medium whitespace-nowrap text-gray-500 hover:border-gray-300 hover:text-gray-700">My Event</a>
         <a href="#" class="border-b-2 border-transparent px-1 py-4 text-sm font-medium whitespace-nowrap text-gray-500 hover:border-gray-300 hover:text-gray-700">Company</a> {% endcomment %}
         <a href="#" class="border-b-2 border-primary-500 px-1 py-4 text-sm font-medium whitespace-nowrap text-primary-600" aria-current="page">My Team</a>
-        <a href="{% url 'member_list' team.slug %}" class="border-b-2 border-transparent px-1 py-4 text-sm font-medium whitespace-nowrap text-gray-500 hover:border-gray-300 hover:text-gray-700">Members</a>
+        <a href="{% url 'membership_list' team.slug %}" class="border-b-2 border-transparent px-1 py-4 text-sm font-medium whitespace-nowrap text-gray-500 hover:border-gray-300 hover:text-gray-700">Members</a>
       </nav>
     </div>
   </div>
@@ -96,14 +96,14 @@
       </div> {% endcomment %}
       <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
         <dt class="text-sm/6 font-medium text-gray-900">Members</dt>
-        <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">{{ team.member_set.all|length }}</dd>
+        <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">{{ team.memberships.all|length }}</dd>
       </div>
       {% comment %} <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
         <dt class="text-sm/6 font-medium text-gray-900">Members</dt>
         <dd class="mt-2 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
-          {% if team.member_set.all  %}
+          {% if team.membership_set.all  %}
           <ul role="list" class="divide-y divide-gray-100 rounded-md border border-gray-200">
-          {% for member in team.member_set.all %}
+          {% for member in team.membership_set.all %}
             <li class="first:rounded-t-md last:rounded-b-md hover:inset-ring-1 hover:inset-ring-primary-400 active:inset-ring-2 active:inset-ring-primary-500">
               <a href="{{ member.get_absolute_url }}">
                 <div class="flex items-center justify-between py-4 pr-5 pl-4 text-sm/6">
