--- a/accounts/templates/accounts/team_form.html
+++ b/accounts/templates/accounts/team_form.html
@@ -1,6 +1,6 @@
-{% extends "_layouts/sidebar.html" %}
+{% extends "_layouts/base.html" %}
 
-{% block sidebar_content %}
+{% block base_content %}
 {% comment %} {% include '_partials/header.html' %} {% endcomment %}
 {% comment %} <h1>{{ view.title }}</h1> {% endcomment %}
 <div class="p-10 pt-4">
@@ -19,7 +19,7 @@
             <ol role="list" class="flex items-center space-x-2">
               <li>
                 <div class="flex">
-                  <a href="{% url 'dashboard' %}" class="text-xs font-medium text-gray-500 hover:text-gray-700">Home</a>
+                  <a href="#" class="text-xs font-medium text-gray-500 hover:text-gray-700">Home</a>
                 </div>
               </li>
               <li>
@@ -47,7 +47,7 @@
           </div>
           <div class="sm:mt-4 flex shrink-0 md:mt-0 md:ml-4">
             {% comment %} <a href="{{ view.create_url }}" type="button" class="mr-3 my-6 sm:my-0 inline-flex items-center rounded-md bg-primary-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-primary-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Create</a> {% endcomment %}
-            {% include '_partials/ask_ai.html' %}
+            {% comment %} {% include '_partials/ask_ai.html' %} {% endcomment %}
           </div>
         </div>
       </div>
@@ -78,4 +78,4 @@
       </div>
     </div>
 </div>
-{% endblock sidebar_content %}
+{% endblock base_content %}
