--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,7 +1,7 @@
 {% extends "registration/base.html" %}
 
 {% block header_content %}
-  {% include "_partials/bolt.html" %}
+  {% include "_partials/logo.html" %}
   <h2 class="my-6 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Request Password Reset</h2>
 {% endblock header_content %}
 
