--- a/accounts/templates/accounts/membership_detail.html
+++ b/accounts/templates/accounts/membership_detail.html
@@ -31,7 +31,7 @@
             <svg class="size-5 shrink-0 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
               <path fill-rule="evenodd" d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
             </svg>
-            <a href="{% url 'team_detail' team.slug %}" class="ml-2 text-xs font-medium text-gray-500 hover:text-gray-700">Team Detail</a>
+            <a href="{% url 'team_detail' membership.team.slug %}" class="ml-2 text-xs font-medium text-gray-500 hover:text-gray-700">Team Detail</a>
           </div>
         </li>
         <li>
@@ -50,7 +50,7 @@
       <h2 class="text-2xl font-bold text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">{{ view.title }}</h2>
     </div>
     <div class="sm:mt-4 flex shrink-0 md:mt-0 md:ml-4">
-      <a href="{% url 'membership_update' team.slug membership.uuid %}" type="button" class="mr-3 my-6 sm:my-0 inline-flex items-center rounded-md bg-primary-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-primary-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Edit</a>
+      <a href="{% url 'membership_update' membership.team.slug membership.uuid %}" type="button" class="mr-3 my-6 sm:my-0 inline-flex items-center rounded-md bg-primary-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-primary-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Edit</a>
       {% comment %} {% include '_partials/ask_ai.html' %} {% endcomment %}
     </div>
   </div>
@@ -67,11 +67,11 @@
         <dt class="text-sm/6 font-medium text-gray-900">Name</dt>
         <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">{{ membership.email }}</dd>
       </div>
-      {% comment %} <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
-        <dt class="text-sm/6 font-medium text-gray-900">Registered / Max. Tickets</dt>
-        <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0"> {{ view.tickets_registered }} / {{ membership.max_units }}</dd>
-      </div>
       <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
+        <dt class="text-sm/6 font-medium text-gray-900">Status</dt>
+        <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0"> {{ membership.status }}</dd>
+      </div>
+      {% comment %}<div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
         <dt class="text-sm/6 font-medium text-gray-900">Max. Tickets Per Registrant</dt>
         <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">{{ membership.max_units_per_permission }}</dd>
       </div> {% endcomment %}
@@ -80,34 +80,53 @@
         <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0">{{ membership.payment_integration }}</dd>
       </div> {% endcomment %}
       <div class="py-6 sm:grid sm:grid-cols-3 sm:gap-4">
-        <dt class="text-sm/6 font-medium text-gray-900">Event Permissions</dt>
+        <dt class="text-sm/6 font-medium text-gray-900">Permissions</dt>
         <dd class="mt-2 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
           {% if membership.permissions.all  %}
-          <ul role="list" class="divide-y divide-gray-100 rounded-md border border-gray-200">
-          {% for permission in membership.permissions.all %}
-            <li class="first:rounded-t-md last:rounded-b-md">
+          {% regroup membership.permissions.all by content_type as content_type_list %}
+          {% for content_type in content_type_list %}
+          <div class="block text-md font-bold text-gray-900 sm:pt-1.5 mb-2">{{ content_type.grouper|title }} Permissions</div>
+          <ul role="list" class="divide-y divide-gray-100 rounded-md border border-gray-200 my-4">
+            {% for permission in content_type.list %}
+              <li class="first:rounded-t-md last:rounded-b-md">
                 <div class="flex items-center justify-between py-4 pr-5 pl-4 text-sm/6">
                   <div class="flex w-0 flex-1 items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
-                    </svg>
+                    <div class="text-green-500">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
+                        </svg>
+                    </div>
                     <div class="ml-4 flex flex-col min-w-0 flex-1 gap-1">
                       <div class="flex">
-                        <span class="truncate font-medium">{{ permission.name }}</span>
+                        <span class="truncate font-medium">{{ permission.name|title }}</span>
                         {% comment %} <p class="mt-0.5 ml-2 rounded-md bg-blue-50 px-1.5 py-0.5 text-xs font-medium whitespace-nowrap text-blue-700 ring-1 ring-blue-600/20 ring-inset">Published</p> {% endcomment %}
                       </div>
                       {% comment %} <span class="shrink-0 text-xs text-gray-400">${{ permission.price }}/unit - Registrants: {{ permission.registrant_set.all|length }}</span> {% endcomment %}
                     </div>
                   </div>
                 </div>
-            </li>
-          {% endfor %}
+              </li>
+            {% endfor %}
           </ul>
+          {% endfor %}
           {% else  %}
-            <p class="mt-2 text-sm text-gray-500">There are currently no records to dispaly. Go to "Create Product" to create a permission.</p>
+            <p class="mt-2 text-sm text-gray-500">This memeber has no permissions. Click "Edit" to add permissions.</p>
           {% endif  %}
         </dd>
       </div>
     </dl>
+    {% comment %} {% regroup membership.permissions.all by content_type as content_type_list %}
+
+    <ul>
+    {% for content_type in content_type_list %}
+        <li>{{ content_type.grouper }}
+        <ul>
+            {% for city in content_type.list %}
+              <li>{{ city.name }}: {{ city.population }}</li>
+            {% endfor %}
+        </ul>
+        </li>
+    {% endfor %}
+    </ul> {% endcomment %}
 </div>
 {% endblock model_content %}
