--- a/accounts/templates/accounts/membership_form.html
+++ b/accounts/templates/accounts/membership_form.html
@@ -35,7 +35,7 @@
                   <svg class="size-5 shrink-0 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
                     <path fill-rule="evenodd" d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
                   </svg>
-                  <a href="{% url 'team_detail' team.slug %}" class="ml-2 text-xs font-medium text-gray-500 hover:text-gray-700">Team Detail</a>
+                  <a href="{% url 'team_detail' membership.team.slug %}" class="ml-2 text-xs font-medium text-gray-500 hover:text-gray-700">Team Detail</a>
                 </div>
               </li>
               <li>
