--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FastInvites</title>
   <script type="text/javascript">
+    
     {% comment %} // function set default css file when CDN fails 
     function setBootstrapCssFallBack() {
       console.log("setting css fallback");
@@ -69,6 +70,7 @@
     integrity="sha384-XGjxtQfXaH2tnPFa9x+ruJTuLE3Aa6LhHSWRr1XeTyhezb4abCG4ccI5AkVDxqC+"
     crossorigin="anonymous" onerror="setBootstrapIconsFallBack()"> {% endcomment %}
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
+  <link rel="preload" href="/static/css/fonts/open-sans-latin.woff2" as="font" type="font/woff2" crossorigin></link>
   <link rel="stylesheet" href="/static/css/fonts/open-sans.css">
   <link rel="stylesheet" href="/static/css/themes/theme-orange-slate.css">
   <link rel="stylesheet" href="/static/css/main.css">
