--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -7,6 +7,18 @@
     <h1 class="mt-4 text-balance text-3xl font-semibold tracking-tight text-gray-900 sm:text-5xl">You're now logged in</h1>
     <p class="mt-6 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8">Click below to sign out</p>
     <div class="mt-10 flex items-center justify-center gap-x-6">
+      {% if request.user.is_email_verified %}
+        <p>Email is verified.</p>
+      {% else %}
+        <a href="#" class="text-sm font-semibold text-gray-900">
+          <form class="hover:bg-gray-100 rounded-md" action="{% url 'verify_email' %}" method="post">
+            {% csrf_token %}
+            <button class="cursor-pointer block px-4 py-2 text-sm text-gray-700 w-[100%] flex justify-start" type="submit">
+              <span>Verify Email</span>
+            </button>
+          </form>
+        </a>
+      {% endif %}
       {% comment %} <a href="{% url 'home' %}" class="rounded-md bg-primary-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-primary-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600">Go back home</a> {% endcomment %}
       <a href="#" class="text-sm font-semibold text-gray-900">
         <form class="hover:bg-gray-100 rounded-md" action="{% url 'logout' %}" method="post">
