--- a/templates/registration/email_verification_email.html
+++ b/templates/registration/email_verification_email.html
@@ -3,7 +3,7 @@
 
 {% translate "Please go to the following page to confirm your email address:" %}
 {% block confirm_link %}
-{{ protocol }}://{{ domain }}{% url 'email_confirm' uidb64=uid token=token %}
+{{ protocol }}://{{ domain }}{% url 'verify_email_complete' uidb64=uid token=token %}
 {% endblock %}
 {% comment %} {% translate 'In case you’ve forgotten, you are:' %} {{ user.get_username }} {% endcomment %}
 
